--- a/TOP/Rule.html
+++ b/TOP/Rule.html
@@ -77,7 +77,7 @@ Point:
 <br>ですのであなたがてきとうに回答すればその分MoaTipsの有用性は自ずと下がるでしょう。
 <br>アンケートでは、特定の個人・団体について、見る人に悪い印象を与えるような表現、特に恣意的と思われる感想など、他の方に迷惑がかかるような内容は控えてください。
 <br>
-MOAでアンケートをまとめるときにこのような内容があった場合、ページ掲載を検討します。場合によっては回答自体を修正、あるいは掲載しないことになります。
+MOAでアンケートをまとめるときにこのような内容があった場合、ページ掲載の是非を検討します。場合によっては回答自体を修正、あるいは掲載しないことになります。
 <br>
 なお、このサイトに掲載された内容について異議がある場合、必ずサイト管理者にお知らせください。 
 </div>
