--- a/TOP/Top.html
+++ b/TOP/Top.html
@@ -219,7 +219,9 @@ MOA
 メンバー募集中
 </div>
 <div id="TopInviteContent">
-現在、私たちMOAはこのMoaTipsを共に運営、管理してくれる人員を募集しています。
+現在、私たちMOAはこのMoaTipsを共に運営、管理してくれる
+<br>
+人員を募集しています。
 <br>
 Webサイト作りに興味のある人、
 <br>
@@ -246,24 +248,14 @@ Webサイト作りに興味のある人、
 Rule
 </div>
 <div id="TopRuleContent">
-現在、私たちMOAはこのMoaTipsを共に運営、管理してくれる人員を募集しています。
-<br>
-Webサイト作りに興味のある人、
-<br>
-デザインに興味のある人、
-<br>
-プログラミングに興味のある人、
-<br>
-経験の有無は問いません。
-<br>
-熱意さえあれば私たちは常にあなたを
-<br>
-歓迎しています。
-<br>
-私たちと共に
-<br>
-あなたのリアルを充実させませんか？
-
+<table width="420px">
+<tr><td>1.</td><td>適当に回答しない</td></tr>
+<tr><td>2.</td><td>恣意的な回答は避ける</td></tr>
+<tr><td>3.</td><td>異議があるときはご意見板へ</td></tr>
+<tr><td>4.</td><td>AIU生以外にサイトを公開しない</td></tr>
+</table>
+　
+　
 </div>
 </div>
 
