--- a/Circles/ClubCircleList/tips-moatips.html
+++ b/Circles/ClubCircleList/tips-moatips.html
@@ -75,7 +75,7 @@ Point:
 <div class="ClubCircleListTitle">
 <img src="../../img/CircleImg/sky/sky.png">
 <p class="ClubCircleName">
-MoaTips
+University of Central Lancashire
 </p>
 <div class="AnswerBox">
 <a href=""><img id="AnswerButton1" src="../../img/button/LeaderAnswer/bcho1-1.png" width="170px" height="80px"></a>
